# hex

./: '  Cargo.toml  \  ]  form: ct.matrix().0,  perf.data
KNO3/: Cargo.toml
hecs/: Cargo.toml
hecs/src/: as_any.rs  component.rs  entity.rs  lib.rs  system.rs  world.rs
hecs_derive/: Cargo.toml
hecs_derive/src/: lib.rs
src/: collider_profile.rs  context.rs  control.rs  drawable.rs  drawing_system.rs  engine.rs  entity_manager.rs  error.rs  id.rs  lib.rs  renderer.rs  sprite_renderer.rs
src/assets/: engine.rs  material.rs  mod.rs  scene.rs  shader.rs  shaders.rs  texture.rs  texture2d.rs  transform.rs
src/component_manager/: component.rs  mod.rs
src/components/: camera.rs  camera2d.rs  camera3d.rs  collider_object.rs  collider_shape.rs  event_handler.rs  instance.rs  light.rs  mod.rs  model.rs  sprite.rs  tag.rs  trans.rs  transform.rs  transform2d.rs  transform3d.rs  world.rs
src/ecs/: as_any.rs  component.rs  component_manager.rs  context.rs  draw.rs  ecs.rs  entity.rs  entity_manager.rs  id.rs  manager.rs  mod.rs  scene.rs  system.rs  to_mut.rs  to_ref.rs  world.rs
src/entity_manager/: mod.rs
src/math/: mat2d.rs  mat3.rs  mat3d.rs  mat4d.rs  mod.rs  ortho.rs  vec2.rs  vec2d.rs  vec3d.rs  vec4d.rs
src/renderer/: fragment.rs  mod.rs  vertex.glsl  vertex.rs
src/renderer2d/: fragment.glsl  mod.rs
src/renderer_manager/: draw.rs  mod.rs  render.rs  renderer.rs
src/renderers/: mod.rs  sprite_renderer.rs
src/shaders/: vertex.glsl
src/sprite_renderer/: fragment.rs  mod.rs  vertex.rs
src/system_manager/: mod.rs  system.rs
src/systems/: mod.rs  (+3 more)
(+108 files in other folders)
